[package]
name = "elite-journal-lib"
version = "0.1.0"
edition = "2021"
description = "Library to read Elite Dangerous journals"
repository = "https://github.com/OMGasm/Elite-Journal-Lib"
license = "MIT"
readme = "README.md"
keywords = [
    "elite-dangerous",
]
categories = ["caching"]

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
serde_with = "3.8.3"

[patch.crates-io]
serde = { git = "https://github.com/OMGasm/serde" }
